_sass/_responsive.scss
@media (max-width: $larger-than-desktop) {
  header {
    nav {
      float: none;
      padding-top: 45px;

      ul li:first-child {
        margin-left: -14px;
      }
    }
  }

  #content.page.index {
    li {
      flex-direction: column !important;
    }

    span.blog-post-date {
      margin: 0px !important;
      margin-top: 3px !important;
      font-size: .80em !important;
      order: 2;
    }
  }
}

@media (max-width: $larger-than-tablet) {
  body #content ul#markdown-toc {
    display: none;
  }

  body #content.blog-post {
    h1 {
      font-size: 2.8rem;
    }

    h2 {
      font-size: 2.3rem;
      line-height: 35px;
    }

    h3 {
      font-size: 1.8rem;
    }

    p img.console-image  {
      border-radius: 4px;
    }
  }
}

.post-content {
  img {
    max-width: 100% !important;
    height: auto;
    display: block;
  }
}

